# FMUComplianceChecker

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS-FMUChecker.txt  ACKNOWLEDGEMENTS.md  BUILD-FMUChecker.txt  BUILD.md  CMakeLists.txt  FMUChecker_build_all_platforms.sh  GetVersion.cmake  HOW-TO-RELEASE-FMUChecker.txt  HOW-TO-RELEASE.md  HOW-TO-RELEASE.txt  LICENCE-FMUChecker.txt  LICENCE.md  LICENSE  README-FMUChecker.txt  README.md  RELEASE-NOTES-FMUChecker.txt  RELEASE-NOTES.md
include/: fmi1_input_reader.h  fmi2_input_reader.h  fmuChecker.h
src/Common/: fmuChecker.c
src/FMI1/: fmi1_check.c  fmi1_cs_sim.c  fmi1_input_reader.c  fmi1_me_sim.c
src/FMI2/: fmi1_cs_sim.c  fmi2_check.c  fmi2_cs_sim.c  fmi2_input_reader.c  fmi2_me_sim.c
tags/1.0/: README-FMUChecker.txt
trunk/: ACKNOWLEDGEMENTS-FMUChecher.txt  BUILD-FMUChecker.txt  CMakeLists.txt  LICENCE-FMUChecker.txt  README-FMUChecker.txt
trunk/include/: fmuChecker.h
trunk/src/Common/: fmuChecker.c
trunk/src/FMI1/: fmi1_check.c  fmi1_cs_sim.c  fmi1_me_sim.c
